--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
 .vscode/settings.json
 .vscode/c_cpp_properties.json
 DhiegoSantosBroetto.zip
+
+Trab4/3 - Transformacoes 2D/arena\.svg
+
+Trab4/3 - Transformacoes 2D/config\.xml
+
+Trab4/Test_4/arena\.svg
+
+Trab4/Test_4/config\.xml
+
+Trab4/trabalhocg
+
+Trab5/trabalhocg
